plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.graalvm.buildtools.native' version '0.10.6'
    id 'co.uzzu.dotenv.gradle' version '4.0.0'
}

group = 'co.uk.stefanpuia'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudAzureVersion', "5.21.0")
    set('springShellVersion', "3.4.0")
    set('immutablesVersion', "2.10.1")
    set('mapstructVersion', "1.6.3")
}

dependencies {
    implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory'
    implementation 'com.azure.spring:spring-cloud-azure-starter-storage'
    implementation 'org.springframework.shell:spring-shell-starter'
    implementation 'org.eclipse.jgit:org.eclipse.jgit:7.2.0.202503040940-r'
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"

    compileOnly 'org.antlr:ST4:4.3.4'
    compileOnly 'org.projectlombok:lombok'
    compileOnly "org.immutables:value:${immutablesVersion}"

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "org.immutables:value:${immutablesVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.shell:spring-shell-starter-test'
    testImplementation 'com.github.valfirst:slf4j-test:3.0.1'
    testImplementation 'org.junit-pioneer:junit-pioneer:2.3.0'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

configurations {
    testImplementation.exclude group: "ch.qos.logback"
}

dependencyManagement {
    imports {
        mavenBom "com.azure.spring:spring-cloud-azure-dependencies:${springCloudAzureVersion}"
        mavenBom "org.springframework.shell:spring-shell-dependencies:${springShellVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs('--add-opens', 'java.base/java.util=ALL-UNNAMED')
    jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
}

bootRun {
    jvmArgs('-Djava.security.properties=' + file("$rootDir/custom.security").absolutePath)
    environment(System.getenv() + env.allVariables())
    outputs.upToDateWhen { false }
}

graalvmNative {
    binaries.configureEach {
        resources.autodetect()
        buildArgs.add('--initialize-at-build-time=ch.qos.logback.core.util.StatusPrinter2')
        buildArgs.add('--initialize-at-build-time=org.slf4j.helpers.Reporter')
        buildArgs.add('--initialize-at-build-time=com.ctc.wstx.stax.WstxInputFactory')
        buildArgs.add('--initialize-at-build-time=com.ctc.wstx.api.ReaderConfig')
        buildArgs.add('--initialize-at-build-time=com.ctc.wstx.util.DefaultXmlSymbolTable')
        buildArgs.add('--initialize-at-build-time=com.azure.core.util.logging.ClientLogger')
        buildArgs.add('--initialize-at-run-time=sun.net.dns.ResolverConfigurationImpl')
        buildArgs.add('--initialize-at-run-time=com.azure.spring.cloud.autoconfigure.implementation.context.properties.AzureGlobalProperties')
        buildArgs.add('--initialize-at-run-time=com.azure.spring.cloud.autoconfigure.implementation.aad.configuration.AadPropertiesConfiguration')
        buildArgs.add('-Djava.security.properties=' + file("$rootDir/custom.security").absolutePath)
    }
}
